--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
   <input id="input-file" type="file">
   <div>
-    <input type="radio" id="output-format-otf" name="output-format" value="ttf" checked>
+    <input type="radio" id="output-format-otf" name="output-format" value="otf" checked>
     <label for="output-format-otf">TTF/OTF</label>
     <input type="radio" id="output-format-woff" name="output-format" value="woff">
     <label for="output-format-woff">WOFF</label>
