--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Font format converter</title>
   <!-- TODO: Figure out why async doesn't work -->
   <script defer src="bundle.js"></script>
 </head>
 <body>
   <input id="input-file" type="file">
   <div>
-    <input type="radio" id="output-format-otf" name="output-format" value="otf" checked>
+    <input type="radio" id="output-format-otf" name="output-format" value="otf">
     <label for="output-format-otf">TTF/OTF</label>
     <input type="radio" id="output-format-woff" name="output-format" value="woff">
     <label for="output-format-woff">WOFF</label>
-    <input type="radio" id="output-format-woff2" name="output-format" value="woff2">
+    <input type="radio" id="output-format-woff2" name="output-format" value="woff2" checked>
     <label for="output-format-woff2">WOFF2</label>
   </div>
   <div id="download-container"></div>
