Show an error when it is happened

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     </div>
     <div id="spinner" class="spinner-off">Processing...</div>
     <div id="download-container"></div>
+    <div id="error-message-container" class="error-message-off"></div>
   </main>
 
   <footer class="container"></footer>
