Show conversion summary

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     <div>
       <input type="radio" id="output-format-otf" name="output-format" value="otf">
       <label for="output-format-otf">TTF/OTF</label>
-      <input type="radio" id="output-format-woff" name="output-format" value="woff" checked>
+      <input type="radio" id="output-format-woff" name="output-format" value="woff">
       <label for="output-format-woff">WOFF</label>
-      <input type="radio" id="output-format-woff2" name="output-format" value="woff2">
+      <input type="radio" id="output-format-woff2" name="output-format" value="woff2" checked>
       <label for="output-format-woff2">WOFF2</label>
     </div>
     <div id="input-select-zone">
@@ -30,11 +30,11 @@
         <input id="input-file" type="file" style="display:none">
         <button id="select-file-button">Select a font</button>
       </div>
-      <div>OR</div>
-      <div id="drop-font-zone">DROP A FONT</div>
+      <div>or</div>
+      <div id>Drop font here</div>
     </div>
     <div id="spinner" class="spinner-off">Processing...</div>
-    <div id="download-container"></div>
+    <div id="convert-result-container"></div>
     <div id="error-message-container" class="error-message-off"></div>
   </main>
 
