--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Font format converter</title>
+  <title>OTF/WOFF/WOFF2 Converter</title>
   <!-- TODO: Figure out why async doesn't work -->
   <script defer src="bundle.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -10,29 +10,35 @@
 
 <body>
   <header>
-    <h1><a href="#">Font format converter</a></h1>
+    <h1><a href="#">OTF/WOFF/WOFF2 Converter</a></h1>
     <div>
-      Convert fonts from/to ttf, otf, woff and woff2.
+      Convert fonts from/to ttf, otf, woff and woff2
     </div>
   </header>
 
   <main class="container">
-    <div>
-      <input type="radio" id="output-format-otf" name="output-format" value="otf">
-      <label for="output-format-otf">TTF/OTF</label>
-      <input type="radio" id="output-format-woff" name="output-format" value="woff">
-      <label for="output-format-woff">WOFF</label>
-      <input type="radio" id="output-format-woff2" name="output-format" value="woff2" checked>
-      <label for="output-format-woff2">WOFF2</label>
-    </div>
     <div id="input-select-zone">
       <div>
         <input id="input-file" type="file" style="display:none">
         <button id="select-file-button">Select a font</button>
       </div>
-      <div>or</div>
-      <div id>Drop font here</div>
     </div>
+
+    <div id="selected-font-info"></div>
+
+    <div id="format-select-container">
+      <input type="radio" class="input-radio" id="output-format-otf" name="output-format" value="otf">
+      <label for="output-format-otf">TTF/OTF</label>
+      <input type="radio" class="input-radio" id="output-format-woff" name="output-format" value="woff">
+      <label for="output-format-woff">WOFF</label>
+      <input type="radio" class="input-radio" id="output-format-woff2" name="output-format" value="woff2" checked>
+      <label for="output-format-woff2">WOFF2</label>
+    </div>
+
+    <div id="convert-button-container">
+      <button id="convert-button" disabled>Convert</button>
+    </div>
+
     <div id="spinner" class="spinner-off">Processing...</div>
     <div id="convert-result-container"></div>
     <div id="error-message-container" class="error-message-off"></div>
