Move ConvertWorker into a separate file

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1><a href="#">OTF/WOFF/WOFF2 Converter</a></h1>
     <div>
-      Convert fonts from/to ttf, otf, woff and woff2
+      Convert fonts from/to ttf, otf, woff and woff2 without server interaction
     </div>
   </header>
 
@@ -36,7 +36,7 @@
     </div>
 
     <div id="convert-button-container">
-      <button id="convert-button" disabled>Convert</button>
+      <button id="convert-button">Convert</button>
     </div>
 
     <div id="spinner" class="spinner-off">Processing...</div>
