--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>OTF/WOFF/WOFF2 Converter</title>
   <!-- TODO: Figure out why async doesn't work -->
-  <script defer src="bundle.js"></script>
+  <script defer src="app.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
