Fix woff2 -> woff conversion bug

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,10 @@
       <button id="convert-button">Convert</button>
     </div>
 
-    <div id="spinner" class="spinner-off">Processing...</div>
+    <div id="spinner" class="spinner-off">
+      <div>Processing...</div>
+      <div>It may take several minutes when you convert a large font.</div>
+    </div>
     <div id="convert-result-container"></div>
     <div id="error-message-container" class="error-message-off"></div>
   </main>
