--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>OTF/WOFF/WOFF2 Converter</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <!-- TODO: Figure out why async doesn't work -->
   <script defer src="app.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -55,7 +56,11 @@
     <div id="error-message-container" class="error-message-off"></div>
   </main>
 
-  <footer class="container"></footer>
+  <footer class="container">
+    <!-- TODO: Don't hardcode version -->
+    <span>v0.1.2</span> -
+    <a href="https://github.com/bashi/kombu/issues">File an issue</a>
+  </footer>
 </body>
 
 </html>
