Use version in package.json for generated html

--- a/html/index.html
+++ b/html/index.html
@@ -57,8 +57,7 @@
   </main>
 
   <footer class="container">
-    <!-- TODO: Don't hardcode version -->
-    <span>v0.1.2</span> -
+    <span id="version">__VERSION__</span> -
     <a href="https://github.com/bashi/kombu/issues">File an issue</a>
   </footer>
 </body>
