Support Native File System API

--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta http-equiv="origin-trial"
+    content="ApEU3Gq/4YXcpXXeA0O1axZCxQ/Sxb+J5pmlR7D+1Zxnyn//WltdnNo7zYJh509dM1u2wx+POavTu7JTMQfEKQYAAABveyJvcmlnaW4iOiJodHRwczovL2tvbWJ1LmthbmVqYWt1Lm9yZzo0NDMiLCJmZWF0dXJlIjoiTmF0aXZlRmlsZVN5c3RlbSIsImV4cGlyeSI6MTU3Nzc5MTUyNiwiaXNTdWJkb21haW4iOnRydWV9">
   <title>OTF/WOFF/WOFF2 Converter</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <!-- TODO: Figure out why async doesn't work -->
@@ -52,16 +54,20 @@
       <div style="display: flex; align-items: center">
         <span>Converting</span>
         <!-- https://codepen.io/aurer/pen/jEGbA -->
-        <svg version="1.1" id="spinner-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="24px" height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+        <svg version="1.1" id="spinner-icon" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24"
+          style="enable-background:new 0 0 50 50;" xml:space="preserve">
           <rect x="0" y="2" width="4" height="18" fill="#333">
-            <animate attributeName="opacity" attributeType="XML" values="1; .2; 1" begin="0s" dur="2s" repeatCount="indefinite" />
+            <animate attributeName="opacity" attributeType="XML" values="1; .2; 1" begin="0s" dur="2s"
+              repeatCount="indefinite" />
           </rect>
           <rect x="7" y="2" width="4" height="18" fill="#333">
-            <animate attributeName="opacity" attributeType="XML" values="1; .2; 1" begin="0.6s" dur="2s" repeatCount="indefinite" />
+            <animate attributeName="opacity" attributeType="XML" values="1; .2; 1" begin="0.6s" dur="2s"
+              repeatCount="indefinite" />
           </rect>
           <rect x="14" y="2" width="4" height="18" fill="#333">
-            <animate attributeName="opacity" attributeType="XML" values="1; .2; 1" begin="1.2s" dur="2s" repeatCount="indefinite" />
+            <animate attributeName="opacity" attributeType="XML" values="1; .2; 1" begin="1.2s" dur="2s"
+              repeatCount="indefinite" />
           </rect>
         </svg>
       </div>
