--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-  <meta http-equiv="origin-trial"
-    content="AlPBIofr5LMXHvCP7VU+YQ5tkJHy1/rymlGWGIVNq2a7xsj59xpTLnU9CKbzGgz8F6qBail0X6EL/tYmalLurwoAAABveyJvcmlnaW4iOiJodHRwczovL2tvbWJ1LmthbmVqYWt1Lm9yZzo0NDMiLCJmZWF0dXJlIjoiTmF0aXZlRmlsZVN5c3RlbSIsImV4cGlyeSI6MTU4MDg2MjM1OSwiaXNTdWJkb21haW4iOnRydWV9">
+  <meta charset="utf-8">
   <title>OTF/WOFF/WOFF2 Converter</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <!-- TODO: Figure out why async doesn't work -->
