Support multiple fonts conversions
Fixes #3.

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
   <main class="container">
     <div id="input-select-zone">
       <div>
-        <input id="input-file" type="file" style="display:none">
+        <input id="input-file" type="file" style="display:none" multiple>
         <button id="select-file-button">Select a font</button>
       </div>
     </div>
