--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>OTF/WOFF/WOFF2 Converter</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <!-- TODO: Figure out why async doesn't work -->
-  <script defer src="app.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="app.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,7 +24,7 @@
   <header>
     <h1><a href="#">OTF/WOFF/WOFF2 Converter</a></h1>
     <div>
-      Convert fonts from/to ttf, otf, woff and woff2 without server interaction
+      Convert fonts from/to ttf, otf, woff and woff2 without server interaction.
     </div>
   </header>
 
